update external js path

--- a/kong.sex.html
+++ b/kong.sex.html
@@ -15,8 +15,8 @@
 <script src="data/js/page_299951923544433_events.js"></script>
 <script src="data/js/page_299951923544433_posts.js"></script>
 
-	<script src="http://code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 	<script src="js/controller.js"></script>
 	<link rel="stylesheet" href="styles/style.css">
 	<base target="_blank">
