--- a/sexandlaw.html
+++ b/sexandlaw.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title ng-bind="ret.info.name">Backup Facebook</title>
 	<script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
-	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
+	<script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
 	<script>
 		var id = "359985940825230";
 		var type = "page";
